--- a/index.html
+++ b/index.html
@@ -39,36 +39,40 @@
     </section>
     <!-- my-skill-document -->
     <section>
-      <h1>My-plan</h1>
       <div class="blog">
-        <div class="skill-type-1">
-          <img src="icons/web.png" alt="">
-          <h2>web development</h2>
-          <p>Lorem ipsum dolor sit amet.</p>
+            <h1>My-plan</h1>
+            <div class="knowledge">
+                  <div class="skill-type-1">
+                      <img src="icons/web.png" alt="">
+                      <h2>web development</h2>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                  </div>
+                  <div class="skill-type-2">
+                    <img src="icons/js.png" alt="">
+                    <h2>javascript</h2>
+                    <p>Lorem ipsum dolor </p>
+                  </div>
+                  <div class="skill-type-3">
+                    <img src="icons/smoke.png" alt="">
+                    <h2>Smoking Habit</h2>
+                    <p>Lorem ipsum dolor .</p>
+                  </div>
+                  <div class="skill-type-4">
+                    <img src="icons/ecom.png" alt="">
+                    <h2>E-comerce</h2>
+                    <p>Lorem ipsum dolor</p>
+                  </div>
+             </div>
         </div>
-        <div class="skill-type-2">
-          <img src="icons/js.png" alt="">
-          <h2>javascript</h2>
-          <p>Lorem ipsum dolor </p>
-        </div>
-        <div class="skill-type-3">
-          <img src="icons/smoke.png" alt="">
-          <h2>Smoking Habit</h2>
-          <p>Lorem ipsum dolor .</p>
-        </div>
-        <div class="skill-type-4">
-          <img src="icons/ecom.png" alt="">
-          <h2>E-comerce</h2>
-          <p>Lorem ipsum dolor</p>
-      </div>
-    </div>
     </section>
     <!-- Gradient use for better -->
     <section>
       <div class="gradient">
-        
-        <h3>Always keep a positive mindset</h3>
-        <button class="call-btn">Call Now</button>
+        <br> <br> <br> <br> <br> <br>
+          <div class="head-btn">
+            <h3>Always keep a positive mindset</h3>
+            <button>Call Now</button>
+        </div>
       </div>
     </section>
   </main> 
@@ -91,7 +95,7 @@
           <div class="right-side">
             <h2>Subscribe</h2>
             <input type="email" name="email" id="" placeholder="Enter your Gmail">
-            <button>Subscribe</button>
+            <button class="last-btn">Subscribe</button>
           </div>
       </div>
   </footer>
