--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <!-- background-image and some title -->
-  <header class="banner">
+<header>
+  <div class="banner">
     <div class="top">
       <h3 class="heading">All Thinks Are</h3>
       <h3 class="heading">Possible if You</h3>
@@ -17,7 +18,8 @@
       <p class="first">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum aperiam perspiciatis magni placeat corporis culpa mollitia vitae nisi sint tempore!</p>
       <button class="btn">Contackt us</button>
     </div>
-  </header>
+  </div>
+</header>  
   <main>
     <!--  my previous History -->
     <section>
